visibility: fix backface-visibility
on safari there was a bug where the cvv was not visible when flipping
the card

using transform to bring the backface up on z axis fixes this problem

--- a/src/components/PaymentCard/style.css
+++ b/src/components/PaymentCard/style.css
@@ -112,7 +112,7 @@
 .back {
   display: block;
   border-radius: 10px;
-  transform: rotateY(180deg);
+  transform: rotateY(180deg) translate3d(0, 0, 1px);
   backface-visibility: hidden;
   z-index: 0;
 }
